--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
     "dompurify": "^2.4.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "framer-motion": "^7.6.6",
     "html-to-text": "^9.0.2",
     "i18next": "^22.1.4",
